# internal/models/listings.go
@@ -76,4 +76,10 @@ type Feature struct {
 type ListingResponse struct {
 	Type     string    `json:"type"`
 	Features []Feature `json:"features"`
+	Pagination
+}
+
+type Pagination struct {
+	Page     uint64 `json:"page"`
+	PageSize uint64 `json:"page_size"`
 }
